tests/compile_fail/custom_norequisites.stderr
error[E0277]: the trait bound `MyEnum: FromStr` is not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ the trait `FromStr` is not implemented for `MyEnum`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyEnum: Default` is not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ the trait `Default` is not implemented for `MyEnum`
   |
   = note: required by `std::default::Default::default`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyStruct: FromStr` is not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ the trait `FromStr` is not implemented for `MyStruct`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyStruct: Default` is not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ the trait `Default` is not implemented for `MyStruct`
   |
   = note: required by `std::default::Default::default`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `to_string` exists for enum `MyEnum`, but its trait bounds were not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
6  | enum MyEnum {
   | -----------
   | |
   | method `to_string` not found for this
   | doesn't satisfy `MyEnum: ToString`
   | doesn't satisfy `MyEnum: std::fmt::Display`
...
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ method cannot be called on `MyEnum` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `MyEnum: std::fmt::Display`
           which is required by `MyEnum: ToString`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `to_string` exists for struct `MyStruct`, but its trait bounds were not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
12 | struct MyStruct {
   | ---------------
   | |
   | method `to_string` not found for this
   | doesn't satisfy `MyStruct: ToString`
   | doesn't satisfy `MyStruct: std::fmt::Display`
...
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ method cannot be called on `MyStruct` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `MyStruct: std::fmt::Display`
           which is required by `MyStruct: ToString`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
